tela de login sendo criada

--- a/dataBase/config.env
+++ b/dataBase/config.env
@@ -1,5 +1,6 @@
-PORT = 3000
+PORT = 4000
 MYSQL_MYSQL_HOST = localhost
 MYSQL_USER = projeto_doido
 MYSQL_PASSWORD = projeto_doido
 MYSQL_DATABASE = projeto_doido
+CHAVE_CRIPTOGRAFICA = 665600
